--- a/blog/static/blog.css
+++ b/blog/static/blog.css
@@ -1,3 +1,12 @@
 div.blog-more {
     margin-top: 1em;
 }
+
+div.comment-area {
+    margin-top: 2em;
+}
+
+h3.comment-area-title {
+    border-bottom: 1px solid #cccccc;
+    padding-bottom: 0.4em;
+}
