--- a/blog/templates/blog_detail.html
+++ b/blog/templates/blog_detail.html
@@ -7,8 +7,9 @@
 {% block nav_blog_active %}
     active
 {% endblock %}
-<link rel="stylesheet" href="{% static 'blog.css' %}">
+
 {% block content %}
+    <link rel="stylesheet" href="{% static 'blog.css' %}">
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-10 col-lg-10 col-xs-offset-1">
@@ -31,6 +32,40 @@
                     {% else %}
                         <p>没有了</p>
                     {% endif %}
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-10 col-lg-10 col-xs-offset-1">
+                <div class="comment-area">
+                    <h3 class="comment-area-title">提交评论</h3>
+                    {% if user.is_authenticated %}
+                        <form action="{% url 'update_comment' %}" method="post" style="overflow: hidden">
+                            {% csrf_token %}
+                            <div class="form-group">
+                                <label for="comment_text">{{ user.username }},欢迎评论</label>
+                                <textarea  class="form-control" id="comment_text" name="context" rows="4"></textarea>
+                            </div>
+                            <input type="hidden" name="object_id" value="{{ blog.pk }}">
+                            <input type="hidden" name="content_type" value="blog">
+                            <input class="btn btn-primary" style="float: right" type="submit" value="评论">
+                        </form>
+                    {% else %}
+                        尚未登录,登录之后方可评论
+                        <a class="btn btn-primary" href="{% url 'login' %}?from={{ request.get_full_path }}">登录</a>
+                        <span> or </span>
+                        <a class="btn btn-danger" href="{% url 'register' %}?from={{ request.get_full_path }}">注册</a>
+                    {% endif %}
+                </div>
+                <div class="comment-area">
+                    <h3 class="comment-area-title">评论列表</h3>
+                    {% for comment in comments %}
+                        <div>
+                            {{ comment.user }}&nbsp;{{ comment.comment_time|date:"Y-m-d H:n:s" }}
+                            {{ comment.text }}
+                        </div>
+                    {% empty %}
+                    {% endfor %}
                 </div>
             </div>
         </div>
