--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     {% block header_css %}{% endblock %}
 </head>
 <body>
-    <div class="navbar navbar-default">
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="{% url 'index' %}">个人博客网站</a>
