--- a/templates/index.html
+++ b/templates/index.html
@@ -14,12 +14,42 @@
     <!-- 图表容器 DOM -->
     <div id="container" style="width: 600px;height:400px;"></div>
     <!-- 引入 highcharts.js -->
+    <div class="hot-blog">
+        <h3>今天热门点击</h3>
+        <ul>
+            {% for hottest in today_hottest_blog %}
+                <li><a href="{% url 'blog_detail' hottest.content_object.pk%}">{{ hottest.content_object.title }}</a>({{ hottest.read_number }})</li>
+            {% empty %}
+                <li>暂无最热博客</li>
+            {% endfor %}
+        </ul>
+    </div>
+    <div class="hot-blog">
+        <h3>昨天热门点击</h3>
+        <ul>
+            {% for hottest in yesterday_hottest_blog %}
+                <li><a href="{% url 'blog_detail' hottest.content_object.pk%}">{{ hottest.content_object.title }}</a>({{ hottest.read_number }})</li>
+            {% empty %}
+                <li>昨天暂无最热博客</li>
+            {% endfor %}
+        </ul>
+    </div>
+    <div class="hot-blog">
+        <h3>一周热门点击</h3>
+        <ul>
+            {% for hottest in weekly_hottest_blog %}
+                <li><a href="{% url 'blog_detail' hottest.id %}">{{ hottest.title }}</a>({{ hottest.sum }})</li>
+            {% empty %}
+                <li>一周内暂无最热博客</li>
+            {% endfor %}
+        </ul>
+    </div>
     <script src="http://cdn.hcharts.cn/highcharts/highcharts.js"></script>
     <script>
         // 图表配置
         var options = {
             chart: { type: 'line' },                        //指定图表的类型，默认是折线图（line）
-            title: { text: null },
+            title: { text: '一周博客阅读量变化' },
             xAxis: {
                 categories: {{ dates|safe }},
                 tickmarkPlacement: 'on',
