--- a/blog/static/blog.css
+++ b/blog/static/blog.css
@@ -10,3 +10,17 @@ h3.comment-area-title {
     border-bottom: 1px solid #cccccc;
     padding-bottom: 0.4em;
 }
+
+div.django-ckeditor-widget {
+    width: 100%;
+}
+
+div.comment{
+    border-bottom: 1px dashed #cccccc;
+    margin-top: 0.5em;
+    padding-bottom: 0.5em;
+}
+
+div.reply {
+    margin-left: 2em;
+}
