--- a/blog/templates/blog_detail.html
+++ b/blog/templates/blog_detail.html
@@ -7,16 +7,20 @@
 {% block nav_blog_active %}
     active
 {% endblock %}
-
-{% block content %}
+{% block header_css %}
     <link rel="stylesheet" href="{% static 'blog.css' %}">
+    <script type="text/javascript" src="{% static 'ckeditor/ckeditor-init.js' %}"></script>
+    <script type="text/javascript" src="{% static 'ckeditor/ckeditor/ckeditor.js' %}"></script>
+{% endblock %}
+{% block content %}
+
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-10 col-lg-10 col-xs-offset-1">
                 <h3>{{ blog.title }}</h3>
                 <ul class="list-inline">
                     <li>作者: {{ blog.author }}</li>
-                    <li>发表日期: {{ blog.create_time|date:"Y-m-d H:n:s" }}</li>
+                    <li>发表日期: {{ blog.create_time|date:"Y-m-d H:i:s" }}</li>
                     <li>分类: <a href="{% url 'blog_with_type' blog.blog_type.pk %}">{{ blog.blog_type }}</a></li>
                     <li>阅读次数: {{ blog.get_read_number }}</li>
                 </ul>
@@ -40,15 +44,18 @@
                 <div class="comment-area">
                     <h3 class="comment-area-title">提交评论</h3>
                     {% if user.is_authenticated %}
-                        <form action="{% url 'update_comment' %}" method="post" style="overflow: hidden">
-                            {% csrf_token %}
-                            <div class="form-group">
-                                <label for="comment_text">{{ user.username }},欢迎评论</label>
-                                <textarea  class="form-control" id="comment_text" name="context" rows="4"></textarea>
+                        <form id="comment_form" action="{% url 'update_comment' %}" method="post" style="overflow: hidden">
+                            <label>{{ user.username }},欢迎评论</label>
+                            <div id="reply_content_container" style="display: none">
+                                <p>回复:  </p>
+                                <div id="reply_content"></div>
                             </div>
-                            <input type="hidden" name="object_id" value="{{ blog.pk }}">
-                            <input type="hidden" name="content_type" value="blog">
-                            <input class="btn btn-primary" style="float: right" type="submit" value="评论">
+                            {% csrf_token %}
+                            {% for field in comment_form %}
+                                {{ field }}
+                            {% endfor %}
+                            <span id="comment_error" class="text-danger pull-left"></span>
+                            <input class="btn btn-primary pull-right" type="submit" value="评论">
                         </form>
                     {% else %}
                         尚未登录,登录之后方可评论
@@ -59,15 +66,93 @@
                 </div>
                 <div class="comment-area">
                     <h3 class="comment-area-title">评论列表</h3>
-                    {% for comment in comments %}
-                        <div>
-                            {{ comment.user }}&nbsp;{{ comment.comment_time|date:"Y-m-d H:n:s" }}
-                            {{ comment.text }}
-                        </div>
-                    {% empty %}
-                    {% endfor %}
+                    <div id="comment_list">
+                        {% for comment in comments %}
+                            <div class="comment">
+                                <span>{{ comment.user }}</span>
+                                <span>{{ comment.comment_time|date:"Y-m-d H:i:s" }}:</span>
+                                <div id="comment_{{ comment.pk }}">
+                                    {{ comment.text|safe }}
+                                </div>
+                                <a href="javascript:reply({{ comment.pk }})">回复</a>
+                            </div>
+                            {% for reply in comment.root_comment.all %}
+                            <div class="reply">
+                                <span>{{ reply.user }}</span>
+                                <span>{{ reply.comment_time|date:"Y-m-d H:i:s" }}:</span>
+                                <span>回复</span>
+                                <span>{{ reply.reply_to.username }}:</span>
+                                <div id="comment_{{ reply.pk }}">
+                                    {{ reply.text|safe }}
+                                </div>
+                                <a href="javascript:reply({{ reply.pk }})">回复</a>
+                            </div>
+                            {% endfor %}
+                        {% empty %}
+                            <span id="no_comment">暂无评论</span>
+                        {% endfor %}
+                     </div>
                 </div>
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block script_extends %}
+    <script type="text/javascript">
+        $("#comment_form").submit(function(){
+            $("#comment_error").text('');
+            if(CKEDITOR.instances["id_text"].document.getBody().getText().trim()==''){
+                $("#comment_error").text('评论内容不能为空');
+                return false;
+            }
+
+            CKEDITOR.instances['id_text'].updateElement();
+
+            $.ajax({
+                url: "{% url 'update_comment' %}",
+                type: 'POST',
+                data: $(this).serialize(),
+                cache: false,
+                success: function(data){
+                    if(data['status']=="SUCCESS"){
+                        if($('#reply_comment_id').val()=='0'){
+                            // 插入评论
+                            var comment_html = '<div id="root_' + data['pk'] + '" class="comment"><span>' + data['username'] + '</span><span> (' + data['comment_time'] + ')：</span><div id="comment_' + data['pk'] + '">' + data['text'] + '</div><a href="javascript:reply(' + data['pk'] + ');">回复</a></div>';
+                            $("#comment_list").prepend(comment_html);
+                        }else{
+                            // 插入回复
+                            var reply_html ='<div class="reply"><span>' + data['username'] + '</span><span> (' + data['comment_time'] + ')</span><span> 回复 </span><span>' + data['reply_to'] + '：</span><div id="comment_' + data['pk'] + '">' + data['text'] + '</div><a href="javascript:reply(' + data['pk'] + ');">回复</a></div>';
+                            $("#root_" + data['root_pk']).append(reply_html);
+                        }
+
+                        // 清空编辑框的内容
+                        CKEDITOR.instances['id_text'].setData('');
+                        $('#reply_content_container').hide();
+                        $('#reply_comment_id').val('0');
+                        $('#no_comment').remove();
+
+                        CKEDITOR.instances['id_text'].setData('');
+                        $("#no_comment").remove()
+                    }else{
+                        $("#comment_error").text(data['error_message']);
+                    }
+                },
+                error: function(xhr){
+                    console.log(xhr);
+                }
+            });
+            return false;
+        });
+        function reply(reply_comment_id) {
+
+            $('#reply_comment_id').val(reply_comment_id);
+            var text = $('#comment_' + reply_comment_id).html()
+            $('#reply_content').html(text);
+            $('#reply_content_container').show();
+            $('html').animate({scrollTop: $('#comment_form').offset().top - 70 },300,function () {
+                CKEDITOR.instances['id_text'].focus();
+            });
+        }
+    </script>
 {% endblock %}
