--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +8,8 @@
     <title>{% block title%}{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'base.css' %}">
     <link rel="stylesheet" href="{% static 'bootstrap-3.3.7/css/bootstrap.min.css' %}">
+    <script type="text/javascript" src="{% static 'bootstrap-3.3.7/js/jquery-1.12.4-jquery.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'bootstrap-3.3.7/js/bootstrap.min.js' %}"></script>
     {% block header_css %}{% endblock %}
 </head>
 <body>
@@ -33,8 +35,6 @@
         </div>
     </div>
     {% block content %} {% endblock %}
-
-    <script type="text/javascript" src="{% static 'bootstrap-3.3.7/js/jquery-1.12.4-jquery.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'bootstrap-3.3.7/js/bootstrap.min.js' %}"></script>
+    {% block script_extends %} {% endblock %}
 </body>
 </html>
