--- a/blog/static/blog.css
+++ b/blog/static/blog.css
@@ -24,3 +24,27 @@ div.comment{
 div.reply {
     margin-left: 2em;
 }
+
+div#reply_content_container {
+    border: 1px solid #d1d1d1;
+    border-bottom: none;
+    background-color: #f8f8f8;
+    overflow: hidden;
+    padding: 1em 1em 0.5em;
+}
+
+p#comment_reply {
+    border-bottom: 1px dashed #ccc;
+    padding-bottom: 0.5em;
+}
+
+div.like {
+    color: #337ab7;
+    cursor: pointer;
+    display: inline-block;
+    padding: 0.8em 0.3em;
+}
+
+div.like .active {
+    color: #f22;
+}
