--- a/blog/templates/blog_list.html
+++ b/blog/templates/blog_list.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
-
+{% load comment_tags %}
+{% load like_count_tags %}
 {% block title%}
     我的网站
 {% endblock %}
@@ -21,6 +22,8 @@
                                 分类: <a href="{% url 'blog_with_type' blog.blog_type.pk %}">{{ blog.blog_type.type_name }}</a>
                                 发表日期: {{ blog.create_time|date:'Y-m-d' }}
                                 阅读次数: {{ blog.get_read_number }}
+                                评论: {% get_comment_count blog %}
+                                点赞: {% get_liked_count blog %}
                             </p>
                             </div>
                         <p>{{ blog.content|striptags|truncatechars:30 }}</p>
