--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,4 @@
 {% extends 'base.html' %}
-{% load staticfiles %}
 {% block title%}
     我的网站|登录
 {% endblock %}
@@ -10,7 +9,8 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-4 col-xs-offset-4">
-                <div class="panel panel-default">
+                {% if not user.is_authenticated %}
+                    <div class="panel panel-default">
                     <div class="panel-heading">
                         <h3 class="panel-title">登录</h3>
                     </div>
@@ -27,6 +27,11 @@
                         </form>
                     </div>
                 </div>
+                {% else %}
+                    <script type="text/javascript">
+                        window.location.href = '/';
+                    </script>
+                {% endif %}
             </div>
         </div>
     </div>
